--- a/BooksApp/BooksApp.csproj
+++ b/BooksApp/BooksApp.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\krenca.m\Desktop\BookAPP\</PublishUrl>
+    <PublishUrl>C:\Users\krenca.m\Desktop\BookApp\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -23,7 +23,8 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <AutorunEnabled>true</AutorunEnabled>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -58,7 +59,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -92,7 +93,6 @@
     <Compile Include="AdminLogin.Designer.cs">
       <DependentUpon>AdminLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="ApiMethod.cs" />
     <Compile Include="BooksTable.cs" />
     <Compile Include="ListBook.cs">
       <SubType>Form</SubType>
@@ -121,9 +121,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="BooksApp_TemporaryKey.pfx" />
     <None Include="packages.config" />
-    <None Include="Properties\DataSources\BooksApp.datasource" />
+    <None Include="Properties\DataSources\BooksApp.datasource">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\DataSources\BooksApp.Properties.Resources.datasource" />
     <None Include="Properties\DataSources\BooksApp.Properties.Settings.datasource" />
     <None Include="Properties\DataSources\BooksTable.datasource" />
